@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.106 2005/02/20 00:00:43 karl Exp $
+$Id: NEWS,v 1.107 2005/03/08 15:06:34 karl Exp $
 This file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
@@ -27,6 +27,8 @@ convenience, here's a url to one of the relevant sections:
 * texinfo.tex:
   . section names with \ characters work properly in pdf outlines.
   . .toc files use @ as the escape character, instead of \.
+* info:
+  . look for info files in the current directory first, by default.
 * Distribution:
   . automake 1.9.5.
 
